noinst_LIBRARIES = libbigraph.a
AM_CXXFLAGS = -std=c++11
libbigraph_a_CPPFLAGS = \
	-I$(top_srcdir)/SGA/Util \
	-I$(top_srcdir)/SGA/Thirdparty \
	-I$(top_srcdir)/SGA/SQG

libbigraph_a_SOURCES = \
                       Bigraph.h Bigraph.cpp \
                       Vertex.h Vertex.cpp  \
                       Edge.h Edge.cpp \
                       EdgeDesc.h EdgeDesc.cpp \
                       GraphCommon.h
